# trade_dash

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: DASHBOARD.md  DASHBOARD_PANELS.md  GAMMA_MAP_FEEDBACK.md  GEXPrice.py  GrossGEX.py  IV_RV_Comparison.ipynb  REGIME_FEEDBACK.md  SUMMARY_FEEDBACK.md  VOL_FEEDBACK.md  black_scholes.py  gex.py  index.md  intraday.py
src/trade_dash/: __init__.py  __main__.py  app.py  config.py  dashboard.py
src/trade_dash/calc/: __init__.py  flow.py  gex.py  gex_term_structure.py  ma.py  spread.py  vol.py
src/trade_dash/charts/: __init__.py  flow_heatmap.py  gex_aggregate.py  gex_heatmap.py  gex_single.py  gex_term_structure.py  price.py  rv_acceleration.py  spread_heatmap.py  vix_term.py  vol_of_vol.py  vol_skew.py  vol_spread.py  volume.py
src/trade_dash/data/: __init__.py  candles.py  options.py
src/trade_dash/tabs/: __init__.py  gamma_map.py  regime.py  summary.py  vol.py
tests/: __init__.py  conftest.py  test_dashboard.py  test_main.py
tests/integration/: test_smoke_ui.py
tests/unit/: test_candle_loader.py  test_charts.py  test_gex_calc.py  test_ma_calc.py  test_options_loader.py  test_vol_calc.py
